@@ -36,7 +36,20 @@ class PandasConversionsTestCase(unittest.TestCase):
         rp_df = robjects.conversion.py2ri(pd_df)
         self.assertEqual(pd_df.shape[0], rp_df.nrow)
         self.assertEqual(pd_df.shape[1], rp_df.ncol)
-        
+
+    def testRepr(self):
+        # this should go to testVector, with other tests for repr()
+        l = (('b', numpy.array([True, False, True], dtype=numpy.bool_)),
+             ('i', numpy.array([1, 2, 3], dtype="i")),
+             ('f', numpy.array([1, 2, 3], dtype="f")),
+             ('s', numpy.array(["a", "b", "c"], dtype="S")),
+             ('u', numpy.array([u"a", u"b", u"c"], dtype="U")))
+        od = OrderedDict(l)
+        pd_df = pandas.core.frame.DataFrame(od)
+        rp_df = robjects.conversion.py2ri(pd_df)
+        s = repr(rp_df) # used to fail with a TypeError
+        s = s.split('\n')
+        self.assertEqual('[Array, Array, Array, FactorV..., FactorV...]', s[1].strip())
 
 def suite():
     if has_pandas:
